feat: add get posts handler and update docs
